docs/lyx.css
/*
* Styles for lyx document.
*/
body {
	font: x-small serif;
	background: #f9f9f9;
	color: black;
	margin: 0;
	padding: 0;
}

#globalWrapper {
	font-size: 127%;
	margin: 10px 80px 10px 80px;
	padding: 20px;
	background: #ffffff;
	line-height: 1.5em;
}
a {
	text-decoration: none;
	color: #0030c0;
	background: none;
}
a:visited {
	color: #603090;
}
a:active {
	color: #ffa000;
}
a:hover {
	text-decoration: underline;
}
a.node {
	color: #000000;
	text-decoration: none;
}
a.leaf {
	color: #000000;
}
h1 {
	margin-top: 1em;
	line-height: 1.5em;
}
sup {
	font-size: 0.75em;
	line-height: 0.5em;
	vertical-align: text-top;
}
sub {
	font-size: 0.75em;
	line-height: 0.5em;
	vertical-align: text-bottom;
}
div.Standard {
	margin: 1em 0;
}
p.dir {
	float: right;
}
p.printindex {
	font-size: 80%;
}
a.printindex {
	color: black;
}
div.float {
	text-align: center;
	padding: 0.5ex;
	margin: 1ex;
}
div.figure {
	display: inline-block;
	padding: 0.5ex;
	margin-left: auto;
	margin-right: auto;
	background: #fbfbfb;
	border: thin solid #c0c0c0;
}
div.table {
	display: inline-block;
	padding: 0ex;
	margin-left: auto;
	margin-right: auto;
	background: #fbfbfb;
	border: thin solid #c0c0c0;
}
div.algorithm {
	display: inline-block;
	text-align: left;
	padding: 0.2ex;
	margin-left: auto;
	margin-right: auto;
	background: #fdfdfd;
	border: thin solid #c0c0c0;
}
div.caption {
	text-align: center;
	font-family: sans-serif;
	margin-left: auto;
	margin-right: auto;
	padding: 0.5ex;
}
img.figure {
	padding: 1ex;
}
table {
	text-align: center;
	border-collapse: collapse;
	margin: 1em;
}
tr.header {
	border-bottom: thin solid #c0c0c0;
	background: #ffffff;
	font-weight: bold;
}
td {
	padding: 1ex;
	border: thin solid #f0f0f0;
}
td div.Standard {
	margin: 0ex;
	padding: 0ex;
}
div div.Standard {
	margin: 0ex;
	padding: 0ex;
}
td.numeric {
	text-align: right;
}
td.empty {
	text-align: center;
}
.right {
	text-align: right;
}
.center {
	text-align: center;
}
p.biblio {
	font-size: 90%;
}
div.Paragraph {
	font-weight: bold;
	font-size: 103%;
}
span.versalitas {
	font-variant: small-caps;
}
span.sans {
	font-family: sans-serif;
}
span.mathsf {
	font-family: sans-serif;
	font-style: normal;
}
span.red {
	color: #800000;
}
span.blue {
	color: #000080;
}
.formula {
	color: #004000;
	text-align: center;
}
div.formula {
	padding: 0.5ex;
	margin-left: auto;
	margin-right: auto;
}
span.overline {
	text-decoration: overline;
}
.fraction {
	display: inline-block;
	position: relative;
	vertical-align: middle;
}
span.denominator {
	display: block;
	padding: 0;
	border-top: thin solid #004000;
}
span.radical {
	display: inline-block;
	padding: 0;
	font-size: 100%;
	vertical-align: top;
}
span.root {
	display: inline-block;
	border-top: thin #004000 solid;
	padding: 0;
}
span.bigsymbol {
	font-size: 150%;
	vertical-align: -0.15ex;
}
sup.bigsymbol {
	position: relative;
	left: -1ex;
}
sub.bigsymbol {
}
span.dot {
	display: none;
	position: relative;
	bottom: 0.8em;
	left: 0.5em;
	padding: 0ex;
}
span.dotted {
	border-top: thin #004000 dotted;
}
span.Foot {
	float: right;
	border: thin solid #c0c0c0;
	background: #ffffff;
	width: 25%;
	padding: 0.5ex;
	font: small normal;
}
div.LyX-Code {
	padding: 0.2em 2em;
	margin-left: 1em;
	margin-right: auto;
	width: auto;
	font-family: monospace;
}
span.listings {
	padding: 0.5em;
	border: thin solid #c0c0c0;
}
span.code {
	font-family: monospace;
}
div.Plain {
	display: inline;
	width: auto;
}
h1.title {
	text-align: center;
}
h2.author {
	text-align: center;
}
span.text {
	font-style: normal;
}
span.textipa {
	color: #008080;
}

